--- a/blur-001.html
+++ b/blur-001.html
@@ -302,6 +302,13 @@
                                     <th scope="col">판매금액</th>
                                     <th scope="col">반품금액</th>
                                     <th scope="col">할인금액</th>
+									<th scope="col">단가DC</th>
+									<th scope="col">전잔액</th>
+                                    <th scope="col">현금입금</th>
+                                    <th scope="col">통장입금</th>
+                                    <th scope="col">외상금액</th>
+                                    <th scope="col">현잔액</th>
+                                    <th scope="col">비고</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -313,69 +320,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -385,6 +336,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -394,6 +352,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -403,6 +368,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -412,6 +384,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -421,6 +400,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -430,6 +416,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -439,6 +432,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -448,6 +448,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -457,6 +464,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -466,6 +480,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -475,7 +496,143 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								
                             </tbody>
                         </table>
                     </div>
