--- a/blur-002.html
+++ b/blur-002.html
@@ -177,6 +177,7 @@
 	
 	
 		<div id="layer-1">
+		
 		레이어1번 샘플용<br><br>
 		 <div>
 </div>
@@ -257,8 +258,7 @@
   <div class="joo2"><div type="text">비고 : ♡♡♡업체관리 비고표시</div></div>
   
   
-  
-</div>
+  </div>
 <!-- //right container -->
 
 
@@ -281,7 +281,7 @@
                         </div>
                     </div>
             
-                    <div class="tbl_box">
+                   <div class="tbl_box">
                         <table>
                             <caption>검색 결과 테이블</caption>
                             <colgroup>
@@ -302,6 +302,13 @@
                                     <th scope="col">판매금액</th>
                                     <th scope="col">반품금액</th>
                                     <th scope="col">할인금액</th>
+									<th scope="col">단가DC</th>
+									<th scope="col">전잔액</th>
+                                    <th scope="col">현금입금</th>
+                                    <th scope="col">통장입금</th>
+                                    <th scope="col">외상금액</th>
+                                    <th scope="col">현잔액</th>
+                                    <th scope="col">비고</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -313,69 +320,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="agn_l">출고</td>
-                                    <td class="agn_l">137</td>
-                                    <td class="agn_l">프릴몬드</td>
-                                    <td>100,100,100원</td>
-                                    <td class="agn_l">100,000,000원</td>
-                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -385,6 +336,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -394,6 +352,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -403,6 +368,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -412,6 +384,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -421,6 +400,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -430,6 +416,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -439,6 +432,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -448,6 +448,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -457,6 +464,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -466,6 +480,13 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
 								<tr>
                                     <td>1</td>
@@ -475,7 +496,143 @@
                                     <td>100,100,100원</td>
                                     <td class="agn_l">100,000,000원</td>
                                     <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
                                 </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								<tr>
+                                    <td>1</td>
+                                    <td class="agn_l">출고</td>
+                                    <td class="agn_l">137</td>
+                                    <td class="agn_l">프릴몬드</td>
+                                    <td>100,100,100원</td>
+                                    <td class="agn_l">100,000,000원</td>
+                                    <td>500,500원</td>
+									<td>500,600원</td>
+									<td>500,700원</td>
+									<td>500,800원</td>
+									<td>500,900원</td>
+									<td>500,100원</td>
+									<td>500,110원</td>
+									<td>500,120원</td>
+                                </tr>
+								
                             </tbody>
                         </table>
                     </div>
